remove obsolete exceptions