@@ -5,7 +5,6 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.lodder.subtools.multisubdownloader.lib.control.MovieReleaseControl;
 import org.lodder.subtools.multisubdownloader.lib.control.TvReleaseControl;
@@ -47,7 +46,7 @@ public class Local implements SubtitleProvider {
     private List<File> getPossibleSubtitles(String filter) {
         return settings.getLocalSourcesFolders().stream()
                 .flatMap(local -> getAllSubtitlesFiles(local, filter).stream())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
